src/sap.m/src/sap/m/themes/base/StandardListItem.less
/* ======================================= */
/* CSS for control sap.m/StandardListItem  */
/* Base theme                              */
/* ======================================= */

.sapMSLI {
	height: 3rem;
}

.sapMSLI.sapMSLIThumbnail,
.sapMSLI.sapMSLINoIconInset,
.sapMSLI.sapMSLIWithDescription,
.sapMSLI.sapMSLINoTitleAdapt {
	height: 5rem;
}

.sapMSLI > .sapMLIBContent {
	white-space: nowrap;
	text-overflow: ellipsis;
	display: flex;
	align-items: center;
}

.sapMSLIDescriptionAndInfo {
	display: flex;
	overflow: hidden;
}

.sapMSLIDiv {
	display: flex;
	flex: auto;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.sapMSLIWithDescription > .sapMLIBContent > .sapMSLIDiv {
	flex-direction: column;
}

.sapMSLINoTitleAdapt:not(.sapMSLIWithDescription) .sapMSLIDiv {
	height: 2.5625rem;
}

.sapMSLITitle,
.sapMSLITitleOnly,
.sapMSLIDescription,
.sapMSLIDescriptionText {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	flex: 1 1 auto;
}

.sapMSLIThumbnail:not(.sapMSLIWrapping) > .sapMLIBContent > .sapMSLIDiv,
.sapMSLIDescriptionText {
	padding-bottom: 0.125rem;
}

.sapMSLITitle,
.sapMSLITitleOnly {
	font-size: var(--sapFontLargeSize);
	color: var(--sapList_TextColor);
}

.sapMSLIDescription,
.sapMSLIDescriptionText {
	font-size: @sapMFontMediumSize;
	color: var(--sapContent_LabelColor);
}

.sapMSLIWithDescription .sapMSLIDescription {
	padding-top: 0.5rem;
}

.sapMSLIImgIcon,
.sapMSLIImg,
.sapMSLIImgNoInsetIcon,
.sapMSLIImgNoInset {
	width: 3rem;
	height: 3rem;
	line-height: 3rem;
	flex: none;
}

.sapMSLIImgIcon,
.sapMSLIImgNoInsetIcon {
	font-family: var(----sapContent_IconFontFamily);
	font-size: 1.375rem;
	color: var(--sapContent_NonInteractiveIconColor);
}

.sapMSLIImgNoInsetIcon,
.sapMSLIImgNoInset,
.sapMSLIImg {
	font-size: 2.5rem;
	margin-right: 0.75rem;
}

.sapMLIBActive .sapMSLIImgNoInsetIcon,
.sapMLIBActive .sapMSLIImgIcon,
.sapMLIBActive .sapMSLIExpandCollapse {
	color: var(--sapList_Active_TextColor);
	text-shadow: none;
}

.sapMSLIDiv.sapMSLIInfoMiddle {
	flex-direction: row;
}

.sapMSLIInfo {
	text-align: end;
	margin-inline-start: 1rem;
	min-width: 7rem;
}

/* Truncation styles when wrapping is disabled */
.sapMSLIInfoTruncate {
	display: block;
	overflow: hidden;
}

.sapMSLIInfoTruncate .sapMObjStatusWrapper {
	max-width: 100%;
	overflow: hidden;
}

.sapMSLIInfoTruncate .sapMObjStatusText {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

/* Word breaking when wrapping is enabled */
.sapMSLIInfo > .sapMObjStatus:not(.sapMSLIInfoTruncate) .sapMObjStatusText {
	white-space: normal;
	word-break: break-word;
}

.sapMSLIInfoMiddle > .sapMSLIInfo {
	padding: 0;
}

/* Wrapping */
.sapMSLI.sapMSLIWrapping {
	height: auto;
	min-height: 3rem;
}

.sapMSLIWithDescription.sapMSLIWrapping,
.sapMSLINoIconInset.sapMSLIWrapping,
.sapMSLINoTitleAdapt.sapMSLIWrapping {
	min-height: 5rem;
}

.sapMSLIWrapping .sapMSLITitle,
.sapMSLIWrapping .sapMSLITitleOnly,
.sapMSLIWrapping .sapMSLIDescription,
.sapMSLIWrapping .sapMSLIDescriptionText {
	white-space: normal;
	word-wrap: break-word;
}

.sapMSLINoTitleAdapt > .sapMLIBSelectS,
.sapMSLINoTitleAdapt > .sapMLIBSelectM,
.sapMSLIWithDescription > .sapMLIBSelectS,
.sapMSLIWithDescription > .sapMLIBSelectM,
.sapMSLIWrapping > .sapMLIBSelectS,
.sapMSLIWrapping > .sapMLIBSelectM,
.sapMSLIWrapping > .sapMLIBContent > .sapMSLIImgIcon,
.sapMSLIWrapping > .sapMLIBContent > .sapMSLIImg,
.sapMSLIWrapping > .sapMLIBContent > .sapMSLIImgNoInsetIcon,
.sapMSLIWrapping > .sapMLIBContent > .sapMSLIImgNoInset {
	align-self: flex-start;
	margin-top: 0.275rem;
}

.sapMSLIWrapping.sapMSLINoIconInset > .sapMLIBContent > .sapMSLIImgNoInsetIcon,
.sapMSLIWrapping.sapMSLINoIconInset > .sapMLIBContent > .sapMSLIImgNoInset,
.sapMSLIWrapping > .sapMLIBContent > .sapMSLIImg {
	margin-top: 0.725rem;
}

.sapMSLIWrapping > .sapMLIBContent > .sapMSLIDiv {
	padding: 1rem 0;

	&:has(.sapMSLIDescription) {
		padding-bottom: 0.5rem;

		.sapMSLITitle {
			padding-bottom: 0.25rem;
		}
	}

	.sapMSLIDescription {
		padding: 0.5rem 0;
	}
}

.sapMSLINoTitleAdapt.sapMSLIWrapping > .sapMLIBContent > .sapMSLIDiv > .sapMSLITitleOnly {
	padding: 0
}

.sapMSLIWrapping .sapMSLITitleOnly > .sapMSLIInfo,
.sapMSLIWrapping .sapMSLIDescriptionText > .sapMSLIInfo {
	float: right;
}

.sapMSLIWrapping .sapMSLIDescriptionText > .sapMSLIInfo {
	padding-top: 0.5rem;
}

.sapMSLIExpandCollapse {
	text-wrap: nowrap;
	position: relative;
	color: var(--sapLinkColor);
	cursor: pointer;
	padding: 0 1px;
}

.sapMSLIExpandCollapse:hover {
	color: var(--sapLink_Hover_Color);
	text-decoration: underline;
}

.sapMSLIExpandCollapse:focus {
	outline: @_sap_m_ListItemBase_Focus_Outline;
}

.sapMSLIExpandCollapse::before {
	position: absolute;
	content: '';
	height: 1.5rem;
	top: -0.25rem;
	width: 100%;
}

.sapMSLIImgIcon {
	margin-inline-start: -0.75rem;
}

.sapMSLIAvatar {
	margin: 0.25rem;
	margin-right: 0.75rem;
}

/* Compact size */
.sapUiSizeCompact .sapMSLI {
	height: 2rem;
}

.sapUiSizeCompact .sapMSLI.sapMSLIThumbnail,
.sapUiSizeCompact .sapMSLI.sapMSLINoIconInset,
.sapUiSizeCompact .sapMSLI.sapMSLIWithDescription,
.sapUiSizeCompact .sapMSLI.sapMSLINoTitleAdapt {
	height: 5rem;
}

.sapUiSizeCompact .sapMSLI.sapMSLIWrapping {
	height: auto;
	min-height: 2rem;
}

.sapUiSizeCompact .sapMSLI.sapMSLIWithDescription.sapMSLIWrapping,
.sapUiSizeCompact .sapMSLI.sapMSLINoIconInset.sapMSLIWrapping,
.sapUiSizeCompact .sapMSLI.sapMSLINoTitleAdapt.sapMSLIWrapping {
	min-height: 5rem;
}

.sapUiSizeCompact .sapMSLIThumbnail:not(.sapMSLIWrapping) > .sapMLIBContent > .sapMSLIDiv {
	padding: 0.25rem 0;
}

.sapUiSizeCompact .sapMSLITitle,
.sapUiSizeCompact .sapMSLITitleOnly {
	font-size: @sapMFontMediumSize;
}

.sapUiSizeCompact .sapMSLIImgIcon {
	height: 2rem;
	line-height: 2rem;
	font-size: 1rem;
}

.sapUiSizeCompact .sapMSLI.sapMSLIWrapping > .sapMLIBSelectS,
.sapUiSizeCompact .sapMSLI.sapMSLIWrapping > .sapMLIBSelectM,
.sapUiSizeCompact .sapMSLI.sapMSLIWithDescription > .sapMLIBSelectS,
.sapUiSizeCompact .sapMSLI.sapMSLIWithDescription > .sapMLIBSelectM,
.sapUiSizeCompact .sapMSLI.sapMSLIWrapping > .sapMLIBContent > .sapMSLIImgIcon {
	margin-top: 0.725rem;
}

